# src/server/handlers/api/openapi.rs
@@ -9,13 +9,7 @@ use super::v1;
     paths(
         accounts::create::create_account,
         v1::notes::create::create_note,
-        v1::notes::list::list_notes,
         sessions::create::create_session,
-    ),
-    components(
-        schemas(
-            v1::notes::list::ListNotesOrderBy,
-        )
     ),
     modifiers(&SecurityAddon),
 )]
