# src/server/handlers/api/v1/notes/mod.rs
@@ -1,13 +1,11 @@
-use axum::routing::get;
 use chrono::{DateTime, Utc};
 
 use crate::server::AppState;
 
 pub mod create;
-pub mod list;
 
 pub fn router() -> axum::Router<AppState> {
-    axum::Router::new().route("/", get(list::list_notes).post(create::create_note))
+    axum::Router::new().route("/", axum::routing::post(create::create_note))
 }
 
 #[derive(serde::Serialize, utoipa::ToSchema)]
